# blocker_app

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  App2.jsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/assets/: app.icns  test.txt
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/handler/: mod.rs
src/components/: TitleCard.jsx
src/components/desktopMenu/: desktopMenu.jsx
src/components/integration/: Integration.jsx  TitleCard.jsx
src/components/loading/: loading.jsx
src/components/log/: logs.jsx
src/components/login/: login.jsx
src/components/mobileMenu/: mobileMenu.jsx  mobileMenu.tsx
src/components/profileSetting/: InputText.jsx  ProfileSetting.jsx
src/components/sidebar/: sidebar.jsx
src/components/timerClock/: TimeAdjust.jsx  TimerClock.jsx
src/ultilities/: auth.js  init.js
